--- a/src/qs8-gemm/MRx8c8-avx2.c.in
+++ b/src/qs8-gemm/MRx8c8-avx2.c.in
@@ -5,7 +5,7 @@
 
 $ABC = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
 $assert REQUANTIZATION == "FP32" or not REQUANTIZATION
-$assert DATATYPE in ["QC8", "QS8", "QU8", "QD8_F16", "QD8_F32", "QC4_F16", "QC4_F32"]
+$assert DATATYPE in ["QC8", "QS8", "QU8", "QD8_F16", "QD8_F32", "QC4_F16", "QC4_F32", "QB4_F16", "QB4_F32"]
 $assert DATATYPE != "QC8" or REQUANTIZATION == "FP32"
 $assert not DATATYPE in ["QD8_F16", "QD8_F32", "QC4_F16", "QC4_F32"] or not REQUANTIZATION
 #include <assert.h>
@@ -20,13 +20,14 @@ $if PREFETCH:
   #include <xnnpack/prefetch.h>
 
 
-$DATATYPE_SPEC = {"QC8": "qs8_qc8w", "QS8": "qs8", "QU8": "qu8", "QD8_F16" : "qd8_f16_qc8w", "QD8_F32": "qd8_f32_qc8w", "QC4_F16": "qd8_f16_qc4w", "QC4_F32": "qd8_f32_qc4w"}[DATATYPE]
+$DATATYPE_SPEC = {"QC8": "qs8_qc8w", "QS8": "qs8", "QU8": "qu8", "QD8_F16" : "qd8_f16_qc8w", "QD8_F32": "qd8_f32_qc8w", "QC4_F16": "qd8_f16_qc4w", "QC4_F32": "qd8_f32_qc4w", "QB4_F16": "qd8_f16_qb4w", "QB4_F32": "qd8_f32_qb4w"}[DATATYPE]
 $REQUANTIZATION_SPEC = "_" + REQUANTIZATION.lower() if REQUANTIZATION else ""
 $PARAMS_STRUCT = REQUANTIZATION.lower() + "_avx2"
-$PARAMS_UNION = {"QC8": "xnn_qs8_qc8w_conv_minmax_params", "QS8": "xnn_qs8_conv_minmax_params", "QU8": "xnn_qu8_conv_minmax_params", "QD8_F16": "xnn_f16_minmax_params", "QD8_F32": "xnn_f32_minmax_params", "QC4_F16": "xnn_f16_qc4w_minmax_params", "QC4_F32": "xnn_f32_qc4w_minmax_params"}[DATATYPE]
+$PARAMS_UNION = {"QC8": "xnn_qs8_qc8w_conv_minmax_params", "QS8": "xnn_qs8_conv_minmax_params", "QU8": "xnn_qu8_conv_minmax_params", "QD8_F16": "xnn_f16_minmax_params", "QD8_F32": "xnn_f32_minmax_params", "QC4_F16": "xnn_f16_qc4w_minmax_params", "QC4_F32": "xnn_f32_qc4w_minmax_params", "QB4_F16": "xnn_f16_qb4w_minmax_params", "QB4_F32": "xnn_f32_qb4w_minmax_params"}[DATATYPE]
 $XINT8_T = "uint8_t" if DATATYPE == "QU8" else "int8_t"
-$OUT_T = {"QC8": "int8_t", "QD8_F16": "void", "QD8_F32": "float", "QC4_F16": "void", "QC4_F32": "float", "QS8": "int8_t", "QU8": "uint8_t"}[DATATYPE]
+$OUT_T = {"QC8": "int8_t", "QD8_F16": "void", "QD8_F32": "float", "QC4_F16": "void", "QC4_F32": "float", "QS8": "int8_t", "QU8": "uint8_t", "QB4_F16": "uint16_t", "QB4_F32": "float"}[DATATYPE]
 $ISA = "avx2" if AVX == 2 else "avx512skx"
+$BLOCKWISE = DATATYPE in ["QB4_F16", "QB4_F32"]
 void xnn_${DATATYPE_SPEC}_gemm_minmax${REQUANTIZATION_SPEC}_ukernel_${MR}x8c8__${ISA}${"_prfm" if PREFETCH else ""}(
     size_t mr,
     size_t nc,
@@ -37,7 +38,7 @@ void xnn_${DATATYPE_SPEC}_gemm_minmax${REQUANTIZATION_SPEC}_ukernel_${MR}x8c8__$
     ${OUT_T}* restrict c,
     size_t cm_stride,
     size_t cn_stride,
-    $if DATATYPE in ["QD8_F16", "QD8_F32", "QC4_F16", "QC4_F32"]:
+    $if DATATYPE in ["QD8_F16", "QD8_F32", "QC4_F16", "QC4_F32", "QB4_F16", "QB4_F32"]:
       const union ${PARAMS_UNION} params[restrict XNN_MIN_ELEMENTS(1)],
       const struct xnn_qd8_quantization_params quantization_params[restrict XNN_MIN_ELEMENTS(1)]) XNN_OOB_READS
     $else:
@@ -53,14 +54,18 @@ void xnn_${DATATYPE_SPEC}_gemm_minmax${REQUANTIZATION_SPEC}_ukernel_${MR}x8c8__$
   assert(c != NULL);
 
   kc = round_up_po2(kc, 8 * sizeof(${XINT8_T}));
+  $if BLOCKWISE:
+    size_t bl = params->avx.blocksize;
+    assert(bl <= round_up_po2(kc, 16));
+    assert(bl != 0);
   const ${XINT8_T}* a0 = a;
-  $if DATATYPE in ["QD8_F16", "QC4_F16"]:
+  $if DATATYPE in ["QD8_F16", "QC4_F16", "QB4_F16"]:
     uint16_t* c0 = (uint16_t*) c;
   $else:
     ${OUT_T}* c0 = c;
   $for M in range(1, MR):
     const ${XINT8_T}* a${M} = (const ${XINT8_T}*) ((uintptr_t) a${M-1} + a_stride);
-    $if DATATYPE in ["QD8_F16", "QC4_F16"]:
+    $if DATATYPE in ["QD8_F16", "QC4_F16", "QB4_F16"]:
       uint16_t* c${M} = (uint16_t*) ((uintptr_t) c${M-1} + cm_stride);
     $else:
       ${OUT_T}* c${M} = (${OUT_T}*) ((uintptr_t) c${M-1} + cm_stride);
@@ -82,7 +87,7 @@ void xnn_${DATATYPE_SPEC}_gemm_minmax${REQUANTIZATION_SPEC}_ukernel_${MR}x8c8__$
 
   $if DATATYPE == "QU8":
     const __m256i vb_zero_point = _mm256_load_si256((const __m256i*) params->${PARAMS_STRUCT}.kernel_zero_point);
-  $if DATATYPE in ["QC4_F16", "QC4_F32"]:
+  $if DATATYPE in ["QC4_F16", "QC4_F32", "QB4_F16", "QB4_F32"]:
     const __m128i vmask = _mm_load_si128((const __m128i*) params->avx.mask);  // 0xF0
   do {
     $if DATATYPE in ["QD8_F16", "QD8_F32", "QC4_F16", "QC4_F32"]:
@@ -94,6 +99,15 @@ void xnn_${DATATYPE_SPEC}_gemm_minmax${REQUANTIZATION_SPEC}_ukernel_${MR}x8c8__$
         const __m256i vinput_zero_point${M} = _mm256_set1_epi32((int) quantization_params[${M}].zero_point);
         $for N in range(0, 8, 2):
           __m256i vacc${M}x${ABC[N:N+2]} = _mm256_mullo_epi32(vinit${ABC[N:N+2]}, vinput_zero_point${M});
+    $elif DATATYPE in ["QB4_F16", "QB4_F32"]:
+      $for N in range(0, 8, 2):
+        const __m128 vinit${ABC[N:N+1]} = _mm_load_ss(&((const float*) w)[${ABC[N:N+1]}]);
+        const __m128 vinit${ABC[N+1:N+2]} = _mm_load_ss(&((const float*) w)[${ABC[N+1:N+2]}]);
+        const __m256 vinit${ABC[N:N+2]} = _mm256_insertf128_ps(_mm256_castps128_ps256(vinit${ABC[N:N+1]}), vinit${ABC[N+1:N+2]}, 1);
+      $for M in range(MR):
+        const __m256 vinput_zero_point${M} = _mm256_set1_ps((float) quantization_params[${M}].zero_point);
+        $for N in range(0, 8, 2):
+          __m256 vout${M}x${ABC[N:N+2]} = _mm256_mul_ps(vinit${ABC[N:N+2]}, vinput_zero_point${M});
     $else:
       $for N in range(0, 8, 2):
         const __m128i vbias0x${ABC[N:N+1]} = _mm_cvtsi32_si128(((const int*) w)[${ABC[N:N+1]}]);
@@ -104,8 +118,17 @@ void xnn_${DATATYPE_SPEC}_gemm_minmax${REQUANTIZATION_SPEC}_ukernel_${MR}x8c8__$
           __m256i vacc${M}x${ABC[N:N+2]} = vacc0x${ABC[N:N+2]};
     w = (const int32_t*) w + 8;
 
-    size_t k = kc;
-    $if DATATYPE in ["QC4_F16", "QC4_F32"]:
+    $if BLOCKWISE:
+      size_t n_blocks = kc / bl;
+      for (size_t nb=0; nb<n_blocks; ++nb) {
+        $for M in range(MR):
+          $for N in range(0, 8, 2):
+            __m256i vacc${M}x${N}${N+1} = _mm256_setzero_si256();
+
+        size_t k = bl;
+    $else:
+      size_t k = kc;
+    $if DATATYPE in ["QC4_F16", "QC4_F32", "QB4_F16", "QB4_F32"]:
       while (k >= 16 * sizeof(${XINT8_T})) {
         $for M in range(MR):
           __m128i va${M} = _mm_broadcastq_epi64(_mm_loadl_epi64((const __m128i*) a${M}));
@@ -156,7 +179,7 @@ void xnn_${DATATYPE_SPEC}_gemm_minmax${REQUANTIZATION_SPEC}_ukernel_${MR}x8c8__$
         a${M} += 8;
 
       $for N in range(0, 8, 2):
-        $if DATATYPE in ["QC4_F16", "QC4_F32"]:
+        $if DATATYPE in ["QC4_F16", "QC4_F32", "QB4_F16", "QB4_F32"]:
           $if N == 0:
             const __m128i vb${ABC[N:N+2]} = _mm_load_si128((const __m128i*) w);
           $else:
@@ -182,35 +205,70 @@ void xnn_${DATATYPE_SPEC}_gemm_minmax${REQUANTIZATION_SPEC}_ukernel_${MR}x8c8__$
       k -= 8 * sizeof(${XINT8_T});
     }
 
-    $for M in range(MR):
-      const __m256i vacc${M}x0213 = _mm256_hadd_epi32(vacc${M}x01, vacc${M}x23);
-      const __m256i vacc${M}x4657 = _mm256_hadd_epi32(vacc${M}x45, vacc${M}x67);
+    $if BLOCKWISE:
+      $for N in range(0, 8, 2):
+        const __m128 vfilter_output_scale${N} = _mm_broadcast_ss(&((const float*) w)[${N}]);
+        const __m128 vfilter_output_scale${N+1} = _mm_broadcast_ss(&((const float*) w)[${N+1}]);
+        const __m256 vfilter_output_scale${N}${N+1} = _mm256_insertf128_ps(
+            _mm256_castps128_ps256(vfilter_output_scale${N}), vfilter_output_scale${N+1}, 1);
+        $for M in range(MR):
+          vout${M}x${N}${N+1} = _mm256_fmadd_ps(_mm256_cvtepi32_ps(vacc${M}x${N}${N+1}), vfilter_output_scale${N}${N+1}, vout${M}x${N}${N+1});
 
-    $for M in range(MR):
-      const __m256i vacc${M}x02461357 = _mm256_hadd_epi32(vacc${M}x0213, vacc${M}x4657);
+      w = (const float*) w + 8;
+      }
 
-    const __m256i vpermute_mask = _mm256_set_epi32(7, 3, 6, 2, 5, 1, 4, 0);
-    $for M in range(MR):
-      __m256i vacc${M}x01234567 = _mm256_permutevar8x32_epi32(vacc${M}x02461357, vpermute_mask);
+      $for M in range(MR):
+        const __m256 vout${M}x0213 = _mm256_hadd_ps(vout${M}x01, vout${M}x23);
+        const __m256 vout${M}x4657 = _mm256_hadd_ps(vout${M}x45, vout${M}x67);
 
-    $if DATATYPE in ["QD8_F16", "QD8_F32", "QC4_F16", "QC4_F32"]:
+      $for M in range(MR):
+        const __m256 vout${M}x02461357 = _mm256_hadd_ps(vout${M}x0213, vout${M}x4657);
+
+      const __m256i vpermute_mask = _mm256_set_epi32(7, 3, 6, 2, 5, 1, 4, 0);
+      $for M in range(MR):
+        __m256 vout${M}x01234567 = _mm256_permutevar8x32_ps(vout${M}x02461357, vpermute_mask);
+    $else:
+      $for M in range(MR):
+        const __m256i vacc${M}x0213 = _mm256_hadd_epi32(vacc${M}x01, vacc${M}x23);
+        const __m256i vacc${M}x4657 = _mm256_hadd_epi32(vacc${M}x45, vacc${M}x67);
+
+      $for M in range(MR):
+        const __m256i vacc${M}x02461357 = _mm256_hadd_epi32(vacc${M}x0213, vacc${M}x4657);
+
+      const __m256i vpermute_mask = _mm256_set_epi32(7, 3, 6, 2, 5, 1, 4, 0);
+      $for M in range(MR):
+        __m256i vacc${M}x01234567 = _mm256_permutevar8x32_epi32(vacc${M}x02461357, vpermute_mask);
+
+    $if DATATYPE in ["QD8_F16", "QD8_F32", "QC4_F16", "QC4_F32", "QB4_F16", "QB4_F32"]:
       $if DATATYPE in ["QC4_F16", "QC4_F32"]:
         $for M in range(MR):
           vacc${M}x01234567 = _mm256_srai_epi32(vacc${M}x01234567, 4);
+      $elif BLOCKWISE:
+        $for M in range(MR):
+          vout${M}x01234567 = _mm256_mul_ps(vout${M}x01234567, _mm256_set1_ps(1.0f/16));
       $for M in range(MR):
-        __m256 vout${M}x01234567 = _mm256_cvtepi32_ps(vacc${M}x01234567);
+        $if not BLOCKWISE:
+          __m256 vout${M}x01234567 = _mm256_cvtepi32_ps(vacc${M}x01234567);
         const __m256 vinput_scale${M} = _mm256_broadcast_ss(&quantization_params[${M}].inv_scale);
 
-      $for M in range(MR):
-        vout${M}x01234567 = _mm256_mul_ps(vout${M}x01234567, vinput_scale${M});
+      $if not BLOCKWISE:
+        $for M in range(MR):
+          vout${M}x01234567 = _mm256_mul_ps(vout${M}x01234567, vinput_scale${M});
 
-      const __m256 vfilter_output_scale01234567 = _mm256_load_ps((const float*) w);
-      const __m256 vbias01234567 = _mm256_load_ps((const float*) w + 8);
-      w = (const float*) w + 16;
-      $for M in range(MR):
-        vout${M}x01234567 = _mm256_fmadd_ps(vout${M}x01234567, vfilter_output_scale01234567, vbias01234567);
+        const __m256 vfilter_output_scale01234567 = _mm256_load_ps((const float*) w);
+        const __m256 vbias01234567 = _mm256_load_ps((const float*) w + 8);
+        w = (const float*) w + 16;
+        $for M in range(MR):
+          vout${M}x01234567 = _mm256_fmadd_ps(vout${M}x01234567, vfilter_output_scale01234567, vbias01234567);
+      $else:
+        const __m256 vbias01234567 = _mm256_load_ps((const float*) w);
+        w = (const float*) w + 8;
+        $for M in range(MR):
+          vout${M}x01234567 = _mm256_fmadd_ps(vout${M}x01234567, vinput_scale${M}, vbias01234567);
 
-      $if DATATYPE in ["QC4_F16", "QD8_F16"]:
+        
+
+      $if DATATYPE in ["QC4_F16", "QB4_F16", "QD8_F16"]:
         const __m256 vmin = _mm256_load_ps(params->avx.min);
         $for M in range(MR):
           vout${M}x01234567 = _mm256_max_ps(vout${M}x01234567, vmin);
